radio buttons aligned correctly

--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -141,6 +141,17 @@ input {
     margin-top: 10px;
 }
 
+#avatarForm {
+    display: flex;
+    flex-flow: wrap;
+}
+
+#avatarForm input {
+    margin-right: 20px;
+    margin-left: 20px;
+    vertical-align: 100px;
+}
+
 /*input:hover,*/
 /*input:focus {*/
 /*    -webkit-transform: scale(1.05);*/
